--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,33 @@
     text-wrap: balance;
   }
 }
+
+#warning-message { display: none; }
+
+@media only screen and (max-width: 550px) {
+  .wrapper {
+    display: none;
+  }
+  .warning-message {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 551px) {
+  .warning-message {
+    display: none;
+  }
+}
+
+@media not all and (max-width: 550px) {
+  .wrapper {
+    display: block;
+  }
+}
+
+/* Add the modified code below */
+@layer utilities {
+  .wrapper {
+    display: none;
+  }
+}
