figtree looks a little better

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,5 +4,5 @@
 
 /* Set Font Defaults to Poppins */
 html {
-	font-family: 'Poppins', system-ui, sans-serif;
+	font-family: 'Figtree', system-ui, sans-serif;
 }
